--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Recursive:wght@300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
 
+    <!-- Google icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -52,7 +55,60 @@
         </nav>
         <section class="articles-grid">
             <article>
-                <img src="" alt="">
+                <img src="img/articles/image 1.png" alt="article-img-1">
+                <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                <p>GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                <div class="article-footer">
+                    <p class="article-date">
+                        June 24, 2022
+                    </p>
+                    <span class="material-symbols-outlined">fiber_manual_record</span>
+                    <p class="article-categories">
+                        DevOps
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="img/articles/image 1.png" alt="article-img-1">
+                <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                <p>GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                <div class="article-footer">
+                    <p class="article-date">
+                        June 24, 2022
+                    </p>
+                    <span class="material-symbols-outlined">fiber_manual_record</span>
+                    <p class="article-categories">
+                        DevOps
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="img/articles/image 1.png" alt="article-img-1">
+                <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                <p>GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                <div class="article-footer">
+                    <p class="article-date">
+                        June 24, 2022
+                    </p>
+                    <span class="material-symbols-outlined">fiber_manual_record</span>
+                    <p class="article-categories">
+                        DevOps
+                    </p>
+                </div>
+            </article>
+            <article>
+                <img src="img/articles/image 1.png" alt="article-img-1">
+                <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                <p>GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                <div class="article-footer">
+                    <p class="article-date">
+                        June 24, 2022
+                    </p>
+                    <span class="material-symbols-outlined">fiber_manual_record</span>
+                    <p class="article-categories">
+                        DevOps
+                    </p>
+                </div>
             </article>
         </section>
     </main>
