--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <p class="article-date">
                         June 24, 2022
                     </p>
-                    <span class="material-symbols-outlined">fiber_manual_record</span>
+                    <div class="material-symbols-outlined">fiber_manual_record</div>
                     <p class="article-categories">
                         DevOps
                     </p>
