--- a/index.html
+++ b/index.html
@@ -54,63 +54,169 @@
             </ul>
         </nav>
         <section class="articles-grid">
-            <article>
-                <img src="img/articles/image 1.png" alt="article-img-1">
-                <h1>Build continuous integration pipelines with GitHub Actions</h1>
-                <p>GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
-                <div class="article-footer">
-                    <p class="article-date">
-                        June 24, 2022
-                    </p>
-                    <span class="material-symbols-outlined">fiber_manual_record</span>
-                    <p class="article-categories">
-                        DevOps
-                    </p>
-                </div>
-            </article>
-            <article>
-                <img src="img/articles/image 1.png" alt="article-img-1">
-                <h1>Build continuous integration pipelines with GitHub Actions</h1>
-                <p>GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
-                <div class="article-footer">
-                    <p class="article-date">
-                        June 24, 2022
-                    </p>
-                    <div class="material-symbols-outlined">fiber_manual_record</div>
-                    <p class="article-categories">
-                        DevOps
-                    </p>
-                </div>
-            </article>
-            <article>
-                <img src="img/articles/image 1.png" alt="article-img-1">
-                <h1>Build continuous integration pipelines with GitHub Actions</h1>
-                <p>GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
-                <div class="article-footer">
-                    <p class="article-date">
-                        June 24, 2022
-                    </p>
-                    <span class="material-symbols-outlined">fiber_manual_record</span>
-                    <p class="article-categories">
-                        DevOps
-                    </p>
-                </div>
-            </article>
-            <article>
-                <img src="img/articles/image 1.png" alt="article-img-1">
-                <h1>Build continuous integration pipelines with GitHub Actions</h1>
-                <p>GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
-                <div class="article-footer">
-                    <p class="article-date">
-                        June 24, 2022
-                    </p>
-                    <span class="material-symbols-outlined">fiber_manual_record</span>
-                    <p class="article-categories">
-                        DevOps
-                    </p>
-                </div>
-            </article>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 1.png" alt="article-img-1">
+                    <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                    <p class="article-preview">GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 2 .png" alt="article-img-1">
+                    <h1>Python for the Absolute beginners</h1>
+                    <p class="article-preview">Python is the most popular programming language out there and it is used for so many different industries.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 3.png" alt="article-img-1">
+                    <h1>Docker from Zero to Hero</h1>
+                    <p class="article-preview">Learn what is Docker and  how Docker is used in the whole software development process.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 4.png" alt="article-img-1">
+                    <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                    <p class="article-preview">GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 5.png" alt="article-img-1">
+                    <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                    <p class="article-preview">GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 6.png" alt="article-img-1">
+                    <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                    <p class="article-preview">GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 7.png" alt="article-img-1">
+                    <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                    <p class="article-preview">GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 8.png" alt="article-img-1">
+                    <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                    <p class="article-preview">GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
+            <a href="#" target="_blank">
+                <article>
+                    <img src="img/articles/image 9.png" alt="article-img-1">
+                    <h1>Build continuous integration pipelines with GitHub Actions</h1>
+                    <p class="article-preview">GitHub actions provide a really powerful way to integrate continuous integration and delivery into your applications.</p>
+                    <div class="article-footer">
+                        <p class="article-date">
+                            June 24, 2022
+                        </p>
+                        <span class="material-symbols-outlined">fiber_manual_record</span>
+                        <p class="article-categories">
+                            DevOps
+                        </p>
+                    </div>
+                </article>
+            </a>
         </section>
+        <nav class="pagination">
+            <ul>
+                <a href="#">Previous</a>
+                <a href="#">1</a>
+                <a href="#" class="selected">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">Next</a>
+            </ul>
+        </nav>
     </main>
+    <footer>
+        <div class="footer-container">
+            <p>writings.dev</p>
+            <a href="#" class="button twitter" id="kamrify-twitter">Design by @kamrify</a>
+            <a href="#" class="button github"  id="viniciusboroto-github">Developed by Vinicius Boroto</a>
+        </div>
+    </footer>
 </body>
 </html>
