Fininshing footer's buttons

--- a/index.html
+++ b/index.html
@@ -214,8 +214,14 @@
     <footer>
         <div class="footer-container">
             <p>writings.dev</p>
-            <a href="#" class="button twitter" id="kamrify-twitter">Design by @kamrify</a>
-            <a href="#" class="button github"  id="viniciusboroto-github">Developed by Vinicius Boroto</a>
+            <a href="https://twitter.com/kamrify" target="_blank" class="button twitter" id="kamrify-twitter">
+                <img src="img/icons/logo-x-small.png" alt="">
+                 Design by @kamrify
+            </a>
+            <a href="https://github.com/ViniciusBoroto" target="_blank" class="button github"  id="viniciusboroto-github">
+                <img src="img/icons/logo-github-small.png" alt="">
+                Developed by Vinícius Boroto
+            </a>
         </div>
     </footer>
 </body>
