--- a/index.html
+++ b/index.html
@@ -41,17 +41,29 @@
     </header>
     <main>
         <nav class="category-nav-container">
-            <div class="category-icons-container">
-                <img src="img/icons/Grid Icon.png" alt="grid-icon">
-                <img src="img/icons/List Icon.png" alt="list-icon">
+            <div class="category-inside-container">
+                <div class="category-icons-container">
+                    <img src="img/icons/Grid Icon.png" alt="grid-icon">
+                    <img src="img/icons/List Icon.png" alt="list-icon">
+                </div>
+                <ul class="categories-container">
+                    <li>Javascript</li>
+                    <li>DevOps</li>
+                    <li>Cloud</li>
+                    <li>Terraform</li>
+                    <li>Architecture</li>
+                    <li>Scalability</li>
+                    <li>Explainers</li>
+                    <li>Tutorials</li>
+                    <li>Python</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Inovation</li>
+                </ul>
             </div>
-            <ul class="categories-container">
-                <li>Javascript</li>
-                <li>DevOps</li>
-                <li>Cloud</li>
-                <li>Terraform</li>
-                <li>Architecture</li>
-            </ul>
+            <div class="fade-container">
+                <div class="fade"></div>
+            </div>
         </nav>
         <section class="articles-grid">
             <a href="#" target="_blank">
