hamburger menu start

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             <div class="header-top-container">
                 <a href="#" class="top-header-logo">writings.dev</a>
                 <nav>
-                    <ul>
+                    <div class="hamburger-btn" onclick="hamburgerMenuClick()">
+                        <span class="material-symbols-outlined">menu</span>
+                    </div>
+                    <ul id="nav-list">
                         <a href="#">categories</a>
                         <a href="#">articles</a>
                         <a href="#">about</a>
@@ -237,5 +240,6 @@
             </a>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
