--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
                 <a href="#" class="top-header-logo">writings.dev</a>
                 <nav>
                     <div class="hamburger-btn" onclick="hamburgerMenuClick()">
-                        <span class="material-symbols-outlined">menu</span>
+                        <span id="burger-icon" class="material-symbols-outlined">menu</span>
                     </div>
                     <ul id="nav-list">
+                        <a href="#">categories</a>
+                        <a href="#">articles</a>
+                        <a href="#">about</a>
+                    </ul>
+                </nav>
+            </div>
+            <div id="nav-list-2-container">
+                <nav>
+                    <ul id="nav-list-2">
                         <a href="#">categories</a>
                         <a href="#">articles</a>
                         <a href="#">about</a>
