Responsivity viewport adjustments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <div class="header-container">
+        <div class="header-container width-centralize-container">
             <div class="header-top-container">
                 <a href="#" class="top-header-logo">writings.dev</a>
                 <nav>
@@ -54,7 +54,7 @@
     </header>
     <main>
         <nav class="category-nav-container">
-            <div class="category-inside-container">
+            <div class="category-inside-container width-centralize-container">
                 <div class="category-icons-container">
                     <img src="img/icons/Grid Icon.png" alt="grid-icon">
                     <img src="img/icons/List Icon.png" alt="list-icon">
@@ -78,7 +78,7 @@
                 <div class="fade"></div>
             </div>
         </nav>
-        <section class="articles-grid">
+        <section class="articles-grid width-centralize-container">
             <a href="#" target="_blank">
                 <article>
                     <img src="img/articles/image 1.png" alt="article-img-1">
@@ -224,7 +224,7 @@
                 </article>
             </a>
         </section>
-        <nav class="pagination">
+        <nav class="pagination width-centralize-container">
             <ul>
                 <a href="#">Previous</a>
                 <a href="#">1</a>
@@ -237,7 +237,7 @@
         </nav>
     </main>
     <footer>
-        <div class="footer-container">
+        <div class="footer-container width-centralize-container">
             <p>writings.dev</p>
             <a href="https://twitter.com/kamrify" target="_blank" class="button twitter" id="kamrify-twitter">
                 <img src="img/icons/logo-x-small.png" alt="">
